--- a/Bhavya_AllExercises/Views/Bhavya/ExSeven.cshtml
+++ b/Bhavya_AllExercises/Views/Bhavya/ExSeven.cshtml
@@ -1,24 +1,25 @@
 ﻿
 @{
     ViewBag.Title = "ExSeven";
-
 }
 
 <h2>ExSeven</h2>
 
 <div>
-    @using (Html.BeginForm()) {
-    <div>
-        <button class="btn btn-primary">Create TextBox</button>
-    </div>
+    @using (Html.BeginForm("GenerateFields", "Bhavya", FormMethod.Post))
+    {
+        <div>
+            <input type="submit" class="btn btn-primary" value="Create TextBox" />
+        </div>
+
+        <div>
+            @ViewBag.DynamicFieldCount
+            @for (var i = 0; i < (ViewBag.DynamicFieldCount ?? 0); i++)
+            {
+                <input type="text" name="dynamicField" placeholder="dynamicField"  /><br />
+            }
+
+        </div>
     }
-
-<div>
-    @ViewBag.dynamicInputs.Length
-    @foreach (var inputId in ViewBag.dynamicInputs)
-        {
-            <input type="text" id="@inputId" name="@inputId" placeholder="@inputId" />
-        }
-</div>
-
+    <div class="text-primary"><b>Data:</b> @ViewBag.Data</div>
 </div>
